--- a/my.md.html
+++ b/my.md.html
@@ -12,13 +12,13 @@ Ahk
 | .          | Z          | X          | C          | V          | B          |            |            | N          | M          | <,         | >.         | ?/         |            |
 | .          | Tab        | Win        | Alt        | Zen        | Ctrl       | Esc        | Shift      | Space      |            |            |            | Enter      |            |
 | --- . ---  | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  | --- . ---  | --- . ---  | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  | --- . ---  |
-| .          | macro_q    | [win cmd]  | win close  | [redo]     | tag prev   |            |            | qh_cfile   | qh_cword   | [Tab]      | wbl_pop    | half prev  |            |
-| [Ctrl]     | rg_cfile   | rg_cword   | page prev  | page next  | redraw     |            |            | win left   | win next   | win prev   | win right  |            |            |
-| .          | wrap       | cut_m      | copy_m     | [v_block]  | ez_motion  |            |            | half next  | [Enter]    |            |            |            |            |
+| .          | v:macro_q  | v:w_cmd    | v:w_close  | v:redo     | v:tag_prev |            |            | qh_cfile   | qh_cword   | [Tab]      | wbl_pop    | v:pg_prev5 |            |
+| [Ctrl]     | rg_cfile   | rg_cword   | v:pg_prev  | v:pg_next  | v:redraw   |            |            | v:w_left   | v:w_next   | v:w_prev   | v:w_right  |            |            |
+| .          | v:wrap     | v:cut_m    | v:copy_m   | v:block    | ez_motion  |            |            | v:pg_next5 | [Enter]    |            |            |            |            |
 | --- . ---  | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  | --- . ---  | --- . ---  | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  | --- . ---  |
 | .          | win next   | win prev   | app prev   | app next   | app tab    |            |            | C-Left     | C-Right    | C-Up       | C-Down     | Esc        |            |
 | .          | Home       | BS         | Left       | Right      | End        |            |            | PgUp       | C-n        | C-p        | PgDn       |            |            |
-| .          | Ins        | Del        | app copy   | app paste  |            |            | [Space]    | Down       | Up         | reload_ahk | susp_ahk   | A-/        |            |
+| .          | Ins        | Del        | app copy   | app paste  |            |            | [Space]    | Down       | Up         | ahk_reload | ahk_susp   | A-/        |            |
 | --- . ---  | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  | --- . ---  | --- . ---  | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  | --- . ---  |
 | [Tab]      | win next   | win prev   | app prev   | app next   | app tab    |            |            |            | F7         | F8         | F9         | F12        |            |
 | .          | quake mode | W-s        | W-d        |            | W-g        |            |            |            | F4         | F5         | F6         | F11        |            |
