--- a/my.md.html
+++ b/my.md.html
@@ -7,18 +7,18 @@ Ahk
 
 | --- . ---  | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  | --- . ---  | --- . ---  | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  | --- . ---  |
 | :--------: | :--------: | :--------: | :--------: | :--------: | :--------: | :--------: | :--------: | :--------: | :--------: | :--------: | :--------: | :--------: | :--------: |
-| .          | Q          | W          | E          | R          | T          |            |            | Y          | U          | I          | O          | P          |            |
-| .          | A          | S          | D          | F          | G          |            |            | H          | J          | K          | L          | :;         |            |
-| .          | Z          | X          | C          | V          | B          |            |            | N          | M          | <,         | >.         | ?/         |            |
+| Tab        | Q          | W          | E          | R          | T          | Left       | Right      | Y          | U          | I          | O          | P          | BS         |
+| Ctrl       | A          | S          | D          | F          | G          | Up         | Down       | H          | J          | K          | L          | :;         | Enter      |
+| Shift      | Z          | X          | C          | V          | B          | PgUp       | PgDn       | N          | M          | <,         | >.         | ?/         | RShift     |
 | .          | Tab        | Win        | Alt        | Zen        | Ctrl       | Esc        | Shift      | Space      |            |            |            | Enter      |            |
 | --- . ---  | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  | --- . ---  | --- . ---  | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  | --- . ---  |
-| .          | v:macro_q  | v:w_cmd    | v:w_close  | v:redo     | v:tag_prev |            |            | qh_cfile   | qh_cword   | [Tab]      | wbl_pop    | v:pg_prev5 |            |
-| [Ctrl]     | rg_cfile   | rg_cword   | v:pg_prev  | v:pg_next  | v:redraw   |            |            | v:w_left   | v:w_next   | v:w_prev   | v:w_right  |            |            |
+| .          | v:macro_q  | v:w_cmd    | v:w_close  | v:redo     | v:tag_prev | v:tab_prev | v:tab_next | v:w_size   | qh_cword   | [Tab]      | wbl_pop    | v:pg_prev5 |            |
+| [Ctrl]     | rg_cfile   | rg_cword   | v:pg_prev  | v:pg_next  | v:redraw   | v:tab_new  | v:tab_del  | v:w_left   | v:w_next   | v:w_prev   | v:w_right  |            |            |
 | .          | v:wrap     | v:cut_m    | v:copy_m   | v:block    | ez_motion  |            |            | v:pg_next5 | [Enter]    |            |            |            |            |
 | --- . ---  | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  | --- . ---  | --- . ---  | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  | --- . ---  |
-| .          | win next   | win prev   | app prev   | app next   | app tab    |            |            | C-Left     | C-Right    | C-Up       | C-Down     | Esc        |            |
-| .          | Home       | BS         | Left       | Right      | End        |            |            | PgUp       | C-n        | C-p        | PgDn       |            |            |
-| .          | Ins        | Del        | app copy   | app paste  |            |            | [Space]    | Down       | Up         | ahk_reload | ahk_susp   | A-/        |            |
+| .          | win next   | win prev   | app prev   | app next   | app tab    |            |            | C-Left     | C-Right    | C-Up       | C-Down     | C-Home     |            |
+| .          | Home       | BS         | Left       | Right      | End        |            |            | PgUp       | C-n        | C-p        | PgDn       | C-End      |            |
+| .          | Ins        | Del        | app copy   | app paste  | Esc        |            | [Space]    | Down       | Up         | ahk_reload | ahk_susp   | A-/        |            |
 | --- . ---  | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  | --- . ---  | --- . ---  | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  | --- . ---  |
 | [Tab]      | win next   | win prev   | app prev   | app next   | app tab    |            |            |            | F7         | F8         | F9         | F12        |            |
 | .          | quake mode | W-s        | W-d        |            | W-g        |            |            |            | F4         | F5         | F6         | F11        |            |
