--- a/my.md.html
+++ b/my.md.html
@@ -20,9 +20,9 @@ Ahk
 | .          | Home       | BS         | Left       | Right      | End        |            |            | PgUp       | C-n        | C-p        | PgDn       | C-End      |            |
 | .          | Ins        | Del        | app copy   | app paste  | Esc        |            | [Space]    | Down       | Up         | ahk_reload | ahk_susp   | A-/        |            |
 | --- . ---  | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  | --- . ---  | --- . ---  | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  | --- . ---  |
-| [Tab]      | win next   | win prev   | app prev   | app next   | app tab    |            |            |            | F7         | F8         | F9         | F12        |            |
-| .          | quake mode | W-s        | W-d        |            | W-g        |            |            |            | F4         | F5         | F6         | F11        |            |
-| .          | W-Left     | W-Up       | W-Right    |            |            |            |            |            | F1         | F2         | F3         | F10        |            |
+| [Tab]      | win next   | win prev   | app prev   | app next   | app tab    |            |            | vs_max     | F7         | F8         | F9         | F12        |            |
+| .          | quake mode | W-s        | W-d        | vs_focus   | W-g        |            |            | vs_sidebar | F4         | F5         | F6         | F11        |            |
+| .          | W-Left     | W-Up       | W-Right    |            |            |            |            | vs_term    | F1         | F2         | F3         | F10        |            |
 | --- . ---  | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  | --- . ---  | --- . ---  | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  | --- . ---  |
 | .          | ()         | (          | )          |            |            |            |            |            |            |            |            |            | [BS]       |
 | .          | {}         | {          | }          |            |            |            |            |            |            |            |            |            |            |
