--- a/my.md.html
+++ b/my.md.html
@@ -22,7 +22,7 @@ Ahk
 | --- . ---  | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  | --- . ---  | --- . ---  | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  | --- . ---  |
 | [Tab]      | win next   | win prev   | app prev   | app next   | app tab    |            |            | vs_max     | F7         | F8         | F9         | F12        |            |
 | .          | quake mode | W-s        | W-d        | vs_focus   | W-g        |            |            | vs_sidebar | F4         | F5         | F6         | F11        |            |
-| .          | W-Left     | W-Up       | W-Right    |            |            |            |            | vs_term    | F1         | F2         | F3         | F10        |            |
+| .          | W-Left     | W-Up       | W-Right    | vs_close   |            |            |            | vs_term    | F1         | F2         | F3         | F10        |            |
 | --- . ---  | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  | --- . ---  | --- . ---  | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  | --- . ---  |
 | .          | ()         | (          | )          |            |            |            |            |            |            |            |            |            | [BS]       |
 | .          | {}         | {          | }          |            |            |            |            |            |            |            |            |            |            |
