--- a/setup.md.html
+++ b/setup.md.html
@@ -41,21 +41,23 @@ setup.sh f_20_setup_init
 
 ## Install Windows Apps
 1. Chrome
-1. Steam
-1. Oculus software
-1. [Cica font](https://github.com/tsunesan3/awsome-jp-coding-fonts)
-1. [Wsltty](https://github.com/mintty/wsltty)
 1. [AutoHotkey](https://www.autohotkey.com/)
 1. [Tablacus](https://tablacus.github.io/explorer.html)
   - アドオン: 分割
   - アドオン: お気に入りバー (配置: 左, 高さ: 300)
   - アドオン: サイドバー (配置: 左)
-1. [Msys2](https://www.msys2.org/)
 1. [Git](https://git-scm.com/)
 1. [Cmake](https://cmake.org/)
 1. [Vim](https://www.vim.org/)
 1. [Node.js](https://nodejs.org/ja/)
 1. [Blender](https://www.blender.org/)
+1. Steam
+1. Oculus software
+
+## Not Install Windows Apps
+1. [Cica font](https://github.com/tsunesan3/awsome-jp-coding-fonts)
+1. [Wsltty](https://github.com/mintty/wsltty)
+1. [Msys2](https://www.msys2.org/)
 
 ~~~
 C:\Program Files\Git\cmd
@@ -67,17 +69,6 @@ C:\Program Files\CMake\bin
 [credential]
   helper = /mnt/c/Program\\ Files/Git/mingw64/bin/git-credential-manager-core.exe
 ~~~
-
-<meta name="keywords" content="*memo:setup.gitbash*">
-Setup Gitbash
-=======================================================
-
-<meta name="keywords" content="*memo:setup.msys2*">
-Setup Msys2
-=======================================================
-## Install Windows Apps
-1. [Python3 64bit](https://www.python.org/)
-1. [Node.js](https://nodejs.org/ja/)
 
 <meta name="keywords" content="*memo:setup.linux*">
 Setup Linux
