--- a/vscode.md.html
+++ b/vscode.md.html
@@ -1,25 +1,25 @@
-<meta name="keywords" content="*local.memo:vscode*">
 <!------------------------------------------>
 <meta charset="utf-8">
 <link rel="stylesheet" href="inc/default.css">
 <style class="fallback">body{visibility:hidden}</style>
 <!------------------------------------------>
 
+<meta name="keywords" content="*memo:vscode*">
 **Vscode**
 
-<meta name="keywords" content="*memo:dev.vscode*">
 Visual Studio Code
 =======================================================
 
 ## Plugin
 
-- Vim
-- C/C++
+- Neovim
 - Python
+- C/C++
 - glTF Tools
 - Git History
 - Shell launcher
 
+<meta name="keywords" content="*memo:vscode.keymap*">
 ## Keymap
 
 [keyboard-shortcuts-windows.pdf](https://code.visualstudio.com/shortcuts/keyboard-shortcuts-windows.pdf)
@@ -39,6 +39,5 @@ Visual Studio Code
 <script src="inc/util.js"></script>
 <script src="inc/markdeep.min.js"></script>
 <script src="https://casual-effects.com/markdeep/latest/markdeep.min.js"></script>
-<!------------------------------------------>
 <meta vim:set syntax=txt nowrap:>
-
+<!------------------------------------------>
