--- a/my.md.html
+++ b/my.md.html
@@ -18,7 +18,7 @@ Ahk
 | --- . ---  | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  | --- . ---  | --- . ---  | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  | --- . ---  |
 | .          | win next   | win prev   | app prev   | app next   | app tab    |            |            | C-Left     | C-Right    | C-Up       | C-Down     | C-Home     |            |
 | .          | Home       | BS         | Left       | Right      | End        |            |            | PgUp       | C-n        | C-p        | PgDn       | C-End      |            |
-| .          | Ins        | Del        | app copy   | app paste  | Esc        |            | [Space]    | Down       | Up         | ahk_reload | ahk_susp   | A-/        |            |
+| .          | Ins        | Del        | app copy   | app paste  | Esc        |            | [Space]    | Down       | Up         | Enter      | ahk_reload | A-/        |            |
 | --- . ---  | --- 1 ---  | --- 2 ---  | --- 3 ---  | --- 4 ---  | --- 5 ---  | --- . ---  | --- . ---  | --- 6 ---  | --- 7 ---  | --- 8 ---  | --- 9 ---  | --- 0 ---  | --- . ---  |
 | [Tab]      | win next   | win prev   | app prev   | app next   | app tab    |            |            | vs_max     | F7         | F8         | F9         | F12        |            |
 | .          | quake mode | W-s        | W-d        | vs_focus   | W-g        |            |            | vs_sidebar | F4         | F5         | F6         | F11        |            |
