--- a/os_windows.md.html
+++ b/os_windows.md.html
@@ -58,7 +58,7 @@ env            | path                              | description
 <meta name="keywords" content="*memo:os.windows.http-server*">
 ## Node.js
 ~~~
-npm install --location=global http-server
+npm install -g http-server
 http-server -p 8000
 ~~~
 
