--- a/python.md.html
+++ b/python.md.html
@@ -157,22 +157,22 @@ while i < 5:
 Anaconda / Miniconda
 =======================================================
 
-Command                                          | Description
--------------------------------------------------|---
-conda info                                       | print info
-conda info -e                                    | print environments
-conda list                                       | list installed packages
-conda update --all                               | update all packages
-conda update {pkg}                               | update package
-conda search {pkg}                               | search packages
-conda install {pkg}                              | install
-conda uninstall {pkg}                            | uninstall
-conda init bash                                  | init bash
-conda create -n {env} python[=3.7]               | create env
-conda create -n {new env} --clone {existing env} | clone env
-conda remove -n {env} --all                      | remove env
-conda activate {env}                             | activate env
-conda deactivate                                 | deactivate
+| Command                                           | Description             |
+| ------------------------------------------------- | ---                     |
+| conda info                                        | print info              |
+| conda info -e                                     | print environments      |
+| conda list                                        | list installed packages |
+| conda update --all                                | update all packages     |
+| conda update {pkg}                                | update package          |
+| conda search {pkg}                                | search packages         |
+| conda install {pkg}                               | install                 |
+| conda uninstall {pkg}                             | uninstall               |
+| conda init bash                                   | init bash               |
+| conda create -n {env} python[=3.7]                | create env              |
+| conda create -n {new env} --clone {existing env}  | clone env               |
+| conda remove -n {env} --all                       | remove env              |
+| conda activate {env}                              | activate env            |
+| conda deactivate                                  | deactivate              |
 
 ## init
 ~~~
