--- a/memo.md.html
+++ b/memo.md.html
@@ -1,7 +1,9 @@
-<meta vim:set syntax=markdown:>
+<!------------------------------------------>
 <meta charset="utf-8">
 <link rel="stylesheet" href="inc/default.css">
 <link rel="stylesheet" href="inc/util.css">
+<style class="fallback">body{visibility:hidden}</style>
+<!------------------------------------------>
 
 **Memo**
 
@@ -12,8 +14,12 @@
 <div id="col2"></div>
 <div id="clock"></div>
 
-<style class="fallback">body{visibility:hidden}</style>
+<!------------------------------------------>
+<script>markdeepOptions={tocStyle:'none'}</script>
 <script src="inc/markdeep.min.js"></script>
 <script src="https://casual-effects.com/markdeep/latest/markdeep.min.js"></script>
+<!------------------------------------------>
 <script src="inc/util.js"></script>
 <script>js_init()</script>
+<meta vim:set syntax=txt nowrap:>
+<!------------------------------------------>
