update to third_party/memo_js/inc

--- a/cpp.md.html
+++ b/cpp.md.html
@@ -1,6 +1,6 @@
 <meta vim:set syntax=markdown:>
 <meta charset="utf-8">
-<link rel="stylesheet" href="inc/default.css">
+<link rel="stylesheet" href="third_party/memo_js/inc/default.css">
 
 **C++**
 
@@ -394,5 +394,5 @@ add_custom_command(TARGET sample POST_BUILD
 ~~~
 
 <style class="fallback">body{visibility:hidden}</style>
-<script src="inc/markdeep.min.js"></script>
+<script src="third_party/memo_js/inc/markdeep.min.js"></script>
 <script src="https://casual-effects.com/markdeep/latest/markdeep.min.js"></script>
