--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8">
 <title>Memo</title>
 <link rel="icon" href="images/icon.png" type="image/png" />
-<link rel="stylesheet" href="inc/menu.css">
+<link rel="stylesheet" href="third_party/memo_js/inc/menu.css">
 </head>
 
 <body>
