--- a/links.md.html
+++ b/links.md.html
@@ -1,6 +1,6 @@
 <meta vim:set syntax=markdown nowrap:>
 <meta charset="utf-8">
-<link rel="stylesheet" href="inc/default.css">
+<link rel="stylesheet" href="third_party/memo_js/inc/default.css">
 
 **Links**
 
@@ -300,5 +300,5 @@ Programming
 
 <script>markdeepOptions={tocStyle:'none'}</script>
 <style class="fallback">body{visibility:hidden}</style>
-<script src="inc/markdeep.min.js"></script>
+<script src="third_party/memo_js/inc/markdeep.min.js"></script>
 <script src="https://casual-effects.com/markdeep/latest/markdeep.min.js"></script>
