--- a/my.md.html
+++ b/my.md.html
@@ -316,9 +316,9 @@ Vim Command
 | :MyClangFormat            | apply clang-format to the current file                    |
 | :MyTabBar                 | Tabularize for vertical bars                              |
 
-<script src="inc/markdeep.min.js"></script>
+<script src="third_party/memo_js/inc/markdeep.min.js"></script>
 <script src="https://casual-effects.com/markdeep/latest/markdeep.min.js"></script>
-<link rel="stylesheet" href="inc/default.css">
+<link rel="stylesheet" href="third_party/memo_js/inc/default.css">
 <style class="fallback">body{visibility:hidden}</style>
 <style type="text/css"><!-- body { width: 95%; max-width: 95%; } --></style>
 <meta charset="utf-8">
