--- a/vscode.md.html
+++ b/vscode.md.html
@@ -1,6 +1,6 @@
 <!------------------------------------------>
 <meta charset="utf-8">
-<link rel="stylesheet" href="inc/default.css">
+<link rel="stylesheet" href="third_party/memo_js/inc/default.css">
 <style class="fallback">body{visibility:hidden}</style>
 <!------------------------------------------>
 
@@ -36,8 +36,8 @@ Visual Studio Code
 
 <!------------------------------------------>
 <script>markdeepOptions={tocStyle:'none'}</script>
-<script src="inc/util.js"></script>
-<script src="inc/markdeep.min.js"></script>
+<script src="third_party/memo_js/inc/util.js"></script>
+<script src="third_party/memo_js/inc/markdeep.min.js"></script>
 <script src="https://casual-effects.com/markdeep/latest/markdeep.min.js"></script>
 <meta vim:set syntax=txt nowrap:>
 <!------------------------------------------>
