--- a/git.md.html
+++ b/git.md.html
@@ -1,6 +1,6 @@
 <meta vim:set syntax=markdown:>
 <meta charset="utf-8">
-<link rel="stylesheet" href="inc/default.css">
+<link rel="stylesheet" href="third_party/memo_js/inc/default.css">
 
 <meta name="keywords" content="*memo:git*">
 **Git**
@@ -467,5 +467,5 @@ Checkout directory:
 ~~~
 
 <style class="fallback">body{visibility:hidden}</style>
-<script src="inc/markdeep.min.js"></script>
+<script src="third_party/memo_js/inc/markdeep.min.js"></script>
 <script src="https://casual-effects.com/markdeep/latest/markdeep.min.js"></script>
