--- a/memo.md.html
+++ b/memo.md.html
@@ -1,7 +1,7 @@
 <!------------------------------------------>
 <meta charset="utf-8">
-<link rel="stylesheet" href="inc/default.css">
-<link rel="stylesheet" href="inc/util.css">
+<link rel="stylesheet" href="third_party/memo_js/inc/default.css">
+<link rel="stylesheet" href="third_party/memo_js/inc/util.css">
 <style class="fallback">body{visibility:hidden}</style>
 <!------------------------------------------>
 
@@ -16,10 +16,10 @@
 
 <!------------------------------------------>
 <script>markdeepOptions={tocStyle:'none'}</script>
-<script src="inc/markdeep.min.js"></script>
+<script src="third_party/memo_js/inc/markdeep.min.js"></script>
 <script src="https://casual-effects.com/markdeep/latest/markdeep.min.js"></script>
 <!------------------------------------------>
-<script src="inc/util.js"></script>
+<script src="third_party/memo_js/inc/util.js"></script>
 <script>js_init()</script>
 <meta vim:set syntax=txt nowrap:>
 <!------------------------------------------>
