--- a/vim.md.html
+++ b/vim.md.html
@@ -717,9 +717,9 @@ $ global -r func   # list reference files
 $ global -f files  # list functions
 ~~~
 
-<script src="inc/markdeep.min.js"></script>
+<script src="third_party/memo_js/inc/markdeep.min.js"></script>
 <script src="https://casual-effects.com/markdeep/latest/markdeep.min.js"></script>
-<link rel="stylesheet" href="inc/default.css">
+<link rel="stylesheet" href="third_party/memo_js/inc/default.css">
 <style class="fallback">body{visibility:hidden}</style>
 <meta charset="utf-8">
 <meta vim:set syntax=txt nowrap:>
