--- a/setup.md.html
+++ b/setup.md.html
@@ -52,6 +52,7 @@ setup.sh f_20_setup_init
 1. [Node.js](https://nodejs.org/ja/)
 1. [Blender](https://www.blender.org/)
 1. Steam
+1. Epic Games Store
 1. Oculus software
 
 ## Not Install Windows Apps
